# homeworks

./: README.md
hw0/: CMakeLists.txt  README.md
hw0/src/: image.h  test.c
hw1/: README.md
hw3/: CMakeLists.txt  README.md
hw3/src/: flow_image.cpp  image.h  load_image.cpp  matrix.h  utils.cpp  utils.h
hw3/src/pango/: CMakeLists.txt  harris.cpp  optical-flow-realtime.cpp  optical-flow.cpp  pango.cpp  pango.h  panorama.cpp  proj.cpp
hw3/src/test/: CMakeLists.txt  test1.cpp  test3.cpp
hw4/: .gitignore  Makefile  README.md  tryml.py  uwimg.py
hw4/src/: classifier.c  filter_image.c  image.h  main.c  test.c
